<resources>
    <string name="app_name">Pale Blue Dot</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поиск термина в википедии</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="menu_button_settings">Настройки</string>
    <string name="menu_button_search">Поиск</string>
    <string name="title_home">Главная</string>
    <string name="title_eath">Земля</string>
    <string name="title_moon">Луна</string>
    <string name="show">Show</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="title_mars">Марс</string>
    <string name="title_space">Космос</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_gallery">Галерея</string>
    <string name="nav_title_communicate">Передать</string>
    <string name="nav_share">Поделиться</string>
    <string name="nav_send">Отправить</string>
</resources>