<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <geekbrians.serg.ui.views.EquilateralImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_of_the_day_stub"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_photo_vector" />

        <TextView
            android:id="@+id/bottom_sheet_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000"
            android:textStyle="bold"
            tools:text="Two Clusters and a Comet" />

        <TextView
            android:id="@+id/bottom_sheet_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:text="This lovely starfield spans some four full moons." />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>